[package]
name = "beverage"
version = "0.1.0"
authors = ["Alex Gill <email@alexfoxgill.com>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies for all targets go here.
[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
bevy_ecs = "0.6"
hex2d = "1.1.0"
bevy_prototype_lyon = "0.4.0"
bevy_easings = "0.5.1"
downcast-rs = "1.2.0"
itertools = "0.10.3"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render", "x11"] } 

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3